--- a/aboutme-style.css
+++ b/aboutme-style.css
@@ -13,3 +13,18 @@ body{
     left: 50%;
     margin: -125px 0 0 -125px;
 }
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+    color: crimson;
+}
+span{
+    float: left;
+    width: 0.7em;
+    font-size: 200%;
+    line-height: 20%;
+    color: deeppink;
+    
+}
